# stm32-cmake

cmake/: arm-none-eabi-checks.cmake  gcc.cmake
examples/fetch-toolchain/: CMakeLists.txt  README.md
examples/link-error/: CMakeLists.txt  STM32H743VITX_FLASH.ld  stm32h7xx_hal_conf.h
